--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Abigail Palus</h1>
+        <h2>Seinor in Hulett, Wyoming</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a seinior at Palus Homeschool taking dual credits to work towards my collage education.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend First Baptist Church in Hulett Wy. My favorite website is  
+            <a href="https://hymnary.org/">here</a>, and you can email me  
+            <a href="apalu288@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy playing the piano and writting letters.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
-        Bob Jones University
+        Highschool Student<br />
+        Palus Homeschool
     </div>
 </body>
 </html>
