--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ h3 {
 <body>
     <div id="content">
         <h1>Abigail Palus</h1>
-        <h2>Seinor in Hulett, Wyoming</h2>
+        <h2>Senior in Hulett, Wyoming</h2>
         
-         <p>I am a seinior at Palus Homeschool taking dual credits to work towards my collage education.</p>
+         <p>I am a senior at Palus Homeschool taking dual credits to work towards my collage education.</p>
          <p>
             I attend First Baptist Church in Hulett Wy. My favorite website is  
             <a href="https://hymnary.org/">here</a>, and you can email me  
