--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: plum;
     font-family: Verdana;
 }  
 #content {
@@ -37,7 +37,7 @@ h3 {
          <p>
             I attend First Baptist Church in Hulett Wy. My favorite website is  
             <a href="https://hymnary.org/">here</a>, and you can email me  
-            <a href="apalu288@students.bju.edu">here</a>.
+            <a href="mailto:apalu288@students.bju.edu">here</a>.
          </p> 
          <p>
             I enjoy playing the piano and writting letters.
