--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en" data-bs-spy="scroll">
+
 <head>
-<style>
-body {
-    background: plum;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
-<body>
-    <div id="content">
-        <h1>Abigail Palus</h1>
-        <h2>Senior in Hulett, Wyoming</h2>
-        
-         <p>I am a senior at Palus Homeschool taking dual credits to work towards my collage education.</p>
-         <p>
-            I attend First Baptist Church in Hulett Wy. My favorite website is  
-            <a href="https://hymnary.org/">here</a>, and you can email me  
-            <a href="mailto:apalu288@students.bju.edu">here</a>.
-         </p> 
-         <p>
-            I enjoy playing the piano and writting letters.
-         </p>
-        <h3>EDUCATION</h3>
-        Highschool Student<br />
-        Palus Homeschool
-    </div>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Brand</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+</head>
+
+<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('bg.jpg');color: var(--bs-emphasis-color);" class="pt-0">
+    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">A Free Bootstrap 5 Business Theme&nbsp;</span><span class="site-heading-lower">Business Casual</span></h1>
+    <nav class="navbar navbar-expand-lg bg-dark py-lg-4 navbar-dark" id="mainNav" style="color: var(--bs-navbar-hover-color);border-color: var(--bs-pink);">
+        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#"><span style="color: rgb(125, 31, 149);">Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link active" href="store.html" data-bs-target="store.html">store</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="text-center intro-text p-5 rounded bg-faded" style="margin-top: 10px;margin-left: 17px;margin-bottom: -36px;padding-bottom: 88px;">
+        <h2 class="section-heading mb-4"><span class="section-heading-upper">Abby's bakery</span><span class="section-heading-lower" style="padding-left: 0px;margin-left: -3px;">Homemade pies&nbsp;</span></h2>
+        <p class="mb-3">Handmade pies ready to order. Every pie has a handmade crust and is filled with a sweet fruit filling.&nbsp;</p>
+        <div class="mx-auto intro-button"></div>
+    </div><img class="img-fluid intro-img mb-3 mb-lg-0 rounded me-5 ms-0 pe-0 mt-0" src="assets/img/PP.jpg" width="180" height="181" style="padding-top: 0px;margin-left: -193px;padding-bottom: 0px;margin-top: -97px;padding-left: 2px;padding-right: 0px;margin-right: -12px;"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded me-5 ms-0 pe-0 mt-0" src="assets/img/20230922_221846.jpg" width="180" height="236" style="padding-top: 0px;margin-left: -193px;padding-bottom: 0px;margin-top: -97px;padding-left: 2px;padding-right: 0px;margin-right: -12px;"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded me-5 ms-0 pe-0 mt-0" src="assets/img/IMG_20230422_164846_216.jpg" width="209" height="155" style="padding-top: 0px;margin-left: -193px;padding-bottom: 0px;margin-top: -97px;padding-left: 2px;padding-right: 0px;margin-right: -12px;">
+    <section class="page-section clearfix">
+        <div class="container">
+            <div class="intro" style="margin-left: 101px;"></div>
+        </div>
+    </section>
+    <footer class="text-center footer text-faded py-5">
+        <div class="container">
+            <p class="text-center m-0 small">Abby 2023</p>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/current-day.js"></script>
 </body>
+
 </html>
